# CodeUA

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: build.md  install.md
locales/en/: author.ftl  elements.ftl  main.ftl  settings.ftl
locales/pl/: about.ftl  author.ftl  error404.ftl  main.ftl  settings.ftl  test.ftl
locales/uk/: author.ftl  error404.ftl  main.ftl  settings.ftl
src/: main.py
src/assets/: index.html
src/assets/locales/en/: about.ftl  error404.ftl  settings.ftl  test.ftl
src/assets/locales/pl/: elements.ftl
src/assets/locales/uk/: about.ftl  elements.ftl  settings.ftl
src/config/: app.py  default.py  defaults.py  google_analytics.py  sound.py
src/routes/: about.py  author.py  error404.py  root.py  settings.py
src/utils/: config.py  elements.py  locale_manager.py  measurement_api.py  models.py  storage.py  utils.py
