[project]
name = "codeua"
version = "1.0.9"
description = "Application for honoring Ukrainian Heroes"
readme = "README.md"
requires-python = "==3.14"
authors = [
    { name = "Andrii Bogdanovych", email = "ab@foundation101.org" }
]
dependencies = [
  "flet>=0.80.2",
  "flet-audio>=0.80.2",
  "flet-storage>=1.0.0",
  "httpx>=0.28.1",
]

[tool.flet]
org = "org.foundation101"
product = "CodeUA"
description = "Щоденне вшанування пам’яті Героїв України. Хвилина мовчання та Гімн"
company = "NGO Foundation.101"
copyright = "Copyright (C) 2026 by NGO Foundation.101"

[tool.flet.app]
path = "src"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py310']
skip-string-normalization = true

[tool.isort]
profile = "black"

