[project]
name = "codeua"
version = "1.2.0"
description = "Application for honoring Ukrainian Heroes"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Andrii Bogdanovych", email = "ab@foundation101.org" }
]

dependencies = [
    "flet==0.82.2",
    "flet-audio==0.82.2",
    "flet-storage==1.1.1",
    "fluent-runtime==0.4.0",
    "httpx==0.28.1",
    "pydantic-settings==2.13.1",
    "pydentic==0.0.1.dev3",
]

[dependency-groups]
dev = [
    "flet-desktop-light==0.82.2",
    "flet-cli==0.82.2",     # Необіхдно для продакшену (веб)
    "flet-web==0.82.2",     # Необіхдно для продакшену (веб)
    "flet-desktop==0.82.2", # Необіхдно для продакшену (веб)
    "pre_commit==4.5.1",
    "black==26.3.1",
    "isort==8.0.1",
]

[tool.flet]
org = "org.foundation101"
product = "CodeUA"
description = "Щоденне вшанування пам’яті Героїв України. Хвилина мовчання та Гімн"
company = "NGO Foundation.101"
copyright = "Copyright (C) 2026 by NGO Foundation.101"

[tool.flet.app]
path = "src"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py310']
skip-string-normalization = true

[tool.isort]
profile = "black"
